deployment-v1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ide-everton
  namespace: everton
spec:
  selector:
    matchLabels:
      app: ide-everton
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
       labels:
         app: ide-everton
    spec:
      containers:
      - image: rishikoy/theiaide-full:1.0.0-SNAPSHOT
        name: theia-ide
