service.yml
apiVersion: v1
kind: Service
metadata:
  name: srv-theia
  namespace: everton
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: ide-everton
